[package]
name = "mode_rotation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
json = "0.12.4"
# pancurses = "0.17.0"
rand = "0.8.5"
regex = "1.9.3"
croot = "0.3.3"
thiserror = "1.0.47"

[features]
debug_scores = []
debug_raw_scores = ["debug_scores"]